--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,18 @@
-[res://CharacterBody3D.gd]
+[res://README.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 2.0,
+"selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://scripts/CharacterBody3D.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,8 +20,8 @@ state={
 "column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 6.7,
+"row": 14,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
